--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
+{% extends "layout.html" %}
+
+{% block content %}
     <h1>Topページ</h1>
     <form action="/logout" method="post">
-        <input type="submit" value="Logout">
+        <input class="btn btn-warning" type="submit" value="Logout">
     </form>
-  </body>
-</html>
+{% endblock %}
