--- a/templates/login.html
+++ b/templates/login.html
@@ -1,17 +1,10 @@
-<!DOCTYPE html>
-<html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
+{% extends "layout.html" %}
+
+{% block content %}
     <h1>LogIn</h1>
     <form action="/login" method="post">
         <input type="text" name="name" placeholder="Name"></br>
         <input type="password" name="password" placeholder="Password">
-        <input type="submit" value="Login">
+        <input class="btn btn-primary" type="submit" value="Login">
     </form>
-  </body>
-</html>
+{% endblock %}
