--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,17 +1,20 @@
-<!DOCTYPE html>
-<html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>SignUp</h1>
-    <form action="/signup" method="post">
-        <input type="text" name="name" placeholder="Name"></br>
-        <input type="password" name="password" placeholder="Password">
-        <input type="submit" value="SignUp">
-    </form>
-  </body>
-</html>
+{% extends "layout.html" %}
+
+{% block content %}
+
+<div class="container">
+  <div class="row">
+    <div class="clol-4 offset-0 text-center">
+        <form action="/signup" method="post">
+            <h1 class="mt-5 mb-3">SignUp</h1>
+            <div class="input-group mb-3">
+                <input type="text" name=name class="form-control" placeholder="Name" aria-label="Username" aria-describedby="basic-addon1">
+    </div>
+    <div class="input-group mb-3"></div>
+        <input type="password" name="password" class="form-control" placeholder="Password"></br>
+        <input class="btn btn-success" type="submit" value="SignUp">
+        </form>
+    </div>
+  </div>
+</div>
+{% endblock %}
